--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -1,13 +1,27 @@
-name: Test GitHub Action
+# .github/workflows/daily-commit.yml
+name: Daily Commit Action
 
 on:
-  workflow_dispatch:   # allows manual trigger
+  schedule:
+    - cron: '30 18 * * *'  # Runs daily at 18:30 UTC (midnight IST)
+  workflow_dispatch:  # Allows manual trigger for testing
 
 jobs:
-  test:
+  daily-commit:
     runs-on: ubuntu-latest
-
+    
     steps:
-
-      - name: 23f3001196@ds.study.iitm.ac.in
-        run: echo "Hello, world! GitHub Actions is working."
+      - name: 23f3001196@ds.study.iitm.ac.in Step 📧
+        uses: actions/checkout@v4
+        
+      - name: Create daily commit
+        run: |
+          echo "Daily automated commit - $(date)" > daily-log.txt
+          
+      - name: Commit changes
+        run: |
+          git config user.name "github-actions[bot]"
+          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          git add daily-log.txt
+          git commit -m "Daily commit: $(date '+%Y-%m-%d %H:%M UTC')"
+          git push
