--- a/.github/workflows/test-action.yml
+++ b/.github/workflows/test-action.yml
@@ -2,34 +2,39 @@ name: Daily Commit Action
 
 on:
   schedule:
-    - cron: '30 18 * * *'  # Runs daily at 18:30 UTC (00:30 IST)
-  workflow_dispatch:  # Manual trigger for testing
+    - cron: '30 18 * * *'  # 18:30 UTC daily (00:30 IST)
+  workflow_dispatch:
 
 permissions:
-  contents: write  # Required for git push
+  contents: write
+  actions: read
 
 jobs:
   daily-commit:
     runs-on: ubuntu-latest
     
     steps:
-      - name: Checkout repository
+      - name: Checkout with full history
         uses: actions/checkout@v4
         with:
-          persist-credentials: true  # Enable git push with GITHUB_TOKEN
+          token: ${{ secrets.GITHUB_TOKEN }}
+          fetch-depth: 0
+          persist-credentials: true
       
-      - name: Email step [23f3001196@ds.study.iitm.ac.in] 
-        run: echo "Daily workflow run initiated - 23f3001196@ds.study.iitm.ac.in"
+      - name: Email step [23f3001196@ds.study.iitm.ac.in] 📧
+        run: echo "Workflow triggered for 23f3001196@ds.study.iitm.ac.in - $(date)"
       
-      - name: Create daily log
+      - name: Create timestamp file
         run: |
-          echo "Daily automated commit - $(date -u '+%Y-%m-%d %H:%M UTC')" > daily-log.txt
+          echo "$(date -u '+%Y-%m-%d %H:%M:%S UTC') - Daily commit #$(date +%s)" > daily-log.txt
       
-      - name: Commit and push changes
+      - name: Setup git
         run: |
           git config user.name "github-actions[bot]"
           git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+      
+      - name: Commit and force push
+        run: |
           git add daily-log.txt
-          git commit -m "Daily commit: $(date -u '+%Y-%m-%d %H:%M UTC')"
-          git push
-
+          git commit -m "Daily commit: $(date -u '+%Y-%m-%d %H:%M UTC')" || echo "No changes to commit"
+          git push origin HEAD:main --force
